# shrimpers-trust

./: .gitignore  README.md  deno.json  main.ts  test.ts  test_auth.ts
cli/: Dockerfile  README.md  deno.json  docker-compose.yaml  main.ts  test.ts
cli/lib/api/: app.ts  finance.ts  reconciliation.ts  tools.ts  treasurer.ts
cli/lib/cache/: index.ts
cli/lib/paypal/: balances.ts  consts.ts  index.ts  transaction.ts  transactionTypes.ts
cli/lib/utils/: email.ts  index.ts  logger.ts
cli/lib/zettle/: consts.ts  index.ts  purchaseTypes.ts
cli/membership/: clicksend.ts  sms.ts
cli/treasurer/: consts.ts  reconcileCardPurchases.ts  reconciliation.ts  report.ts  types.ts
lib/paypal/: balances.ts  cache.ts  consts.ts  index.ts  reconciliation.ts  report.ts  transaction.ts  transactionTypes.ts  types.ts
lib/utils/: index.ts  logger.ts
lib/zettle/: index.ts  purchase.ts
member-report/: .gitignore  pyproject.toml
member-report/members/: data.py  member.py
member-report/members/charts/: __init__.py  consts.py  location.py  membership.py
member-report/notebooks/: member_report.ipynb
treasurer/: consts.ts  reconcileCardPurchases.ts  reconcileZettlePurchases.ts  reconciliation.ts  report.ts  types.ts
utils/: index.ts
web/: Dockerfile  README.md  docker-compose.yaml  middleware.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/components/: navbar.tsx
web/lib/: auth.ts  auth0.ts  withPageAuthRequired.tsx
web/src/: roles.ts  utils.ts
web/src/types/: finance.ts
(+16 files in other folders)
